--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,13 @@
   "description": "Makes specific searches on Google easier.",
   "version": "1.0.0",
   "manifest_version": 3,
+  "permissions": ["scripting"],
   "action": {
-    "default_popup": "interface/popup.html"
+    "default_popup": "interface/popup.html",
+    "default_icon": {
+      "16": "/icons/search16.png",
+      "32": "/icons/search32.png",
+      "64": "/icons/search64.png"
+    }
   }
 }
